[package]
name = "raft"
version = "0.1.0"
authors = [
    "Neil Shen <overvenus@gmail.com>",
    "ShuNing <nolouch@gmail.com>",
    "Connor <zbk602423539@gmail.com>",
    "庄天翼 <zty0826@gmail.com>",
    "MIT 6.824 <6824-staff@lists.csail.mit.edu>"
]
edition = "2018"
publish = false

[dependencies]
labrpc = { path = "../labrpc" }
labcodec = { path = "../labcodec" }
linearizability = { path = "../linearizability"}
prost = "0.5"
prost-derive = "0.5"
bytes = "0.4.7"
rand = "0.4"
log = "0.4"
futures = "0.1"
futures-timer = "0.1"
tokio = "0.1.22"
futures-cpupool = "0.1.8"
threadpool = "1.7.1"
num_cpus = "1.11.0"

[dev-dependencies]
env_logger = "0.6"

[build-dependencies]
prost-build = "0.5"
